external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_fields_non_type_field.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/parser/positional_struct_fields_non_type_field.move:3:23
  │
3 │     public struct Foo(Not a type)
  │                   --- ^^^
  │                   │   │
  │                   │   Could not resolve the name 'Not'
  │                   │   Did you mean: 'Foo'
  │                   Similarly named defintion found here

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/positional_struct_fields_non_type_field.move:3:27
  │
3 │     public struct Foo(Not a type)
  │                           ^
  │                           │
  │                           Unexpected 'a'
  │                           Expected ',' or ')'
